--- a/arkfuture/html/irc.html
+++ b/arkfuture/html/irc.html
@@ -684,7 +684,7 @@
 			</div>
 			<div class="settings-group">
 				<label>频道:</label>
-				<input type="text" id="channelInput" value="#lobby" placeholder="#channel">
+				<input type="text" id="channelInput" value="" placeholder="#lobby">
 			</div>
 			<div class="settings-group">
 				<label title="启用后会在断开时自动重连">
